DosageLog visible 필드 추가(#171)